--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
